# chat-serv

./: CMakeLists.txt  main.cpp
src/: error.cpp  parsecmd.cpp  server.cpp
src/header/: data.h  errornum.h  parsecmd.h  server.h
